Bug 1298756 - Use uint8_t/uint16_t as underlying type for enums from webidl. r=bz

MozReview-Commit-ID: 3uS9s5ZrPFd

--HG--
extra : rebase_source : ff64b4468ee99ba08fd8638298a27711b7fb6393